# haskell-Data.Hash.Consistent

./: Data-Hash-Consistent.cabal  README.md  example.hs
Data/Hash/: Consistent.hs
